# LTC_administrator_operations_dashboard

./: CMakeLists.txt  README.md  build_release_and_run.bat
LTC_administrator_operations_v1/: CMakeLists.txt  build_release_and_run.bat
LTC_administrator_operations_v1/resources/: app.qss
LTC_administrator_operations_v1/scripts/: build_linux.sh  build_windows_msvc.bat
LTC_administrator_operations_v1/src/: main.cpp
LTC_administrator_operations_v1/src/core/: AppWindow.h
LTC_administrator_operations_v1/src/data/: DatabaseManager.cpp  DatabaseManager.h
LTC_administrator_operations_v1/src/ui/dialogs/: LoginDialog.cpp
LTC_administrator_operations_v1/src/ui/pages/: BedBoardPage.cpp  CareConferencePage.h  CensusManagementPage.cpp  CensusManagementPage.h  CompliancePage.h  CredentialingPage.h  DashboardPage.cpp  DietaryPage.cpp  DietaryPage.h  DocumentCenterPage.cpp  EnvironmentalRoundsPage.cpp  FormsValidationPage.cpp  HuddlePage.cpp  InfectionControlPage.cpp  MdsTripleCheckPage.cpp  MdsTripleCheckPage.h  MetricsChartsPage.h  PharmacyPage.cpp  PreparednessPage.cpp  PreparednessPage.h  SearchFiltersPage.cpp  SearchFiltersPage.h  ServiceLayerPage.cpp  ShiftHandoffPage.h  SocialServicesPage.cpp  SocialServicesPage.h  SopCenterPage.h  SurveyCommandCenterPage.h  SurveyReadinessPage.cpp  SurveyReadinessPage.h  TasksPage.cpp  TasksPage.h  TrainingPage.cpp  TrainingPage.h  TransportationPage.h  WorkflowCenterPage.cpp  WorkflowCenterPage.h
LTC_administrator_operations_v2/: CMakeLists.txt  README.md
LTC_administrator_operations_v2/src/: main.cpp
LTC_administrator_operations_v2/src/core/: AppWindow.cpp
LTC_administrator_operations_v2/src/data/: DatabaseManager.cpp
LTC_administrator_operations_v2/src/ui/pages/: ActivitiesEngagementPage.h  AdmissionsPage.cpp  AuditLogPage.h  BackupRestorePage.cpp  BudgetPage.cpp  BudgetPage.h  CalendarPage.cpp  CareConferencePage.cpp  DashboardPage.h  DepartmentDashboardsPage.cpp  EnvironmentalRoundsPage.cpp  EnvironmentalRoundsPage.h  HousekeepingLaundryPage.cpp  HuddlePage.cpp  IncidentsPage.cpp  IncidentsPage.h  InfectionControlPage.h  ManagedCarePage.h  MdsTripleCheckPage.cpp  MetricsChartsPage.cpp  OutbreakCommandPage.h  PharmacyPage.cpp  PharmacyPage.h  QapiPage.h  ReleaseCandidatePage.cpp  ReleaseCandidatePage.h  ResidentsPage.cpp  RevenueCyclePage.cpp  ServiceLayerPage.h  StaffingPage.h  (+5 more)
LTC_administrator_operations_v3/: CMakeLists.txt  README.md
LTC_administrator_operations_v3/build_test/: CMakeCache.txt
LTC_administrator_operations_v3/resources/: app.qss
LTC_administrator_operations_v3/src/: main.cpp
LTC_administrator_operations_v3/src/core/: AppWindow.cpp
LTC_administrator_operations_v3/src/data/: DatabaseManager.cpp  DatabaseManager.h
LTC_administrator_operations_v3/src/ui/dialogs/: LoginDialog.h
LTC_administrator_operations_v3/src/ui/pages/: ActivitiesEngagementPage.cpp  AlertsEscalationCenterPage.cpp  AlertsEscalationCenterPage.h  AlertsPage.cpp  BarrierEscalationBoardPage.cpp  BarrierEscalationBoardPage.h  BudgetPage.cpp  BudgetPage.h  CalendarPage.h  ContractManagementPage.cpp  ContractManagementPage.h  CredentialingPage.cpp  DashboardCustomizePage.cpp  DashboardPage.cpp  DepartmentPulseBoardPage.cpp  DepartmentPulseBoardPage.h  EmergencyPreparednessPage.cpp  EnvironmentalRoundsPage.cpp  EvidenceBinderBoardPage.cpp  EvidenceBinderBoardPage.h  ExecutiveFollowUpBoardPage.cpp  ExecutiveFollowUpBoardPage.h  ExecutivePrintExportCenterPage.cpp  ExecutivePrintExportCenterPage.h  ExternalSyncReadinessPage.h  FormsValidationPage.h  GroupedWorkspacePage.cpp  GroupedWorkspacePage.h  HousekeepingLaundryPage.h  IncidentsPage.cpp  KpiTrendEnginePage.h  LeadershipHuddleGeneratorPage.cpp  LeadershipHuddleGeneratorPage.h  LeadershipRoundsPage.cpp  LeadershipRoundsPage.h  ManagedCarePage.cpp  MdsTripleCheckPage.cpp  MockSurveyDrillBoardPage.cpp  MockSurveyDrillBoardPage.h  MorningMeetingBoardPage.cpp  (+40 more)
LTC_administrator_operations_v3/src/ui/widgets/: GlobalInsightPanel.cpp  GlobalInsightPanel.h
build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
build_mingw/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_mingw/LTCAdministratorOperationsDashboard_autogen/: deps  mocs_compilation.cpp
build_mingw/LTCAdministratorOperationsDashboard_autogen/3YJK5W5UP7/: qrc_resources.cpp
build_mingw/LTCAdministratorOperationsDashboard_autogen/4PIRG7OLBM/: moc_DashboardPage.cpp  moc_DashboardPage.cpp.d  moc_IncidentsPage.cpp  moc_IncidentsPage.cpp.d  moc_ResidentsPage.cpp.d  moc_StaffingPage.cpp  moc_StaffingPage.cpp.d  moc_SurveyReadinessPage.cpp  moc_SurveyReadinessPage.cpp.d  moc_TasksPage.cpp  moc_TasksPage.cpp.d
build_mingw/LTCAdministratorOperationsDashboard_autogen/JCA2YNWUYB/: moc_KpiCard.cpp  moc_KpiCard.cpp.d
build_mingw/LTCAdministratorOperationsDashboard_autogen/PRMOGMWJPH/: moc_AppWindow.cpp  moc_AppWindow.cpp.d
build_mingw/LTCAdministratorOperationsDashboard_autogen/SG3YC7EIDC/: moc_DatabaseManager.cpp  moc_DatabaseManager.cpp.d
resources/: app.qss  resources.qrc
scripts/: build_macos.sh  build_windows_mingw.bat  build_windows_msvc.bat
src/: main.cpp
src/core/: AppWindow.cpp  AppWindow.h
src/data/: DatabaseManager.cpp  DatabaseManager.h
src/ui/pages/: AdmissionsPage.cpp  AdmissionsPage.h  AlertsPage.h  AuditLogPage.cpp  BackupRestorePage.h  BedBoardPage.h  BudgetPage.cpp  BudgetPage.h  CompliancePage.cpp  CompliancePage.h  DashboardCustomizePage.h  DashboardPage.cpp  DashboardPage.h  DepartmentDashboardsPage.h  DocumentCenterPage.cpp  DocumentCenterPage.h  EmergencyPreparednessPage.cpp  EmergencyPreparednessPage.h  ExternalSyncReadinessPage.cpp  HuddlePage.cpp  HuddlePage.h  IncidentsPage.cpp  IncidentsPage.h  InfectionControlPage.cpp  InfectionControlPage.h  KpiTrendEnginePage.cpp  ManagedCarePage.cpp  OutbreakCommandPage.cpp  QapiPage.cpp  QapiPage.h  QualityMeasuresPage.cpp  QualityMeasuresPage.h  ReportsPage.cpp  ResidentsPage.cpp  ResidentsPage.h  RiskManagementPage.h  StaffingPage.cpp  StaffingPage.h  SurveyReadinessPage.cpp  SurveyReadinessPage.h  (+3 more)
src/ui/widgets/: KpiCard.cpp  KpiCard.h
(+1 files in other folders)
